welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:20: error: Invalid literal number
def 5fleurs() {
    ^FlowerCase:39: error: Invalid literal number
	5fleurs()
        ^